[gd_scene load_steps=22 format=3 uid="uid://bofgyfm1gpy5n"]

[ext_resource type="Theme" uid="uid://ey77cx5cys1u" path="res://Tools/StickyNote/res/stickynote.theme" id="1_51uyu"]
[ext_resource type="Script" uid="uid://dbap0gqox0ty1" path="res://addons/markdownlabel/markdownlabel.gd" id="1_kdu8c"]
[ext_resource type="Script" uid="uid://kqxfyxmtucy6" path="res://Tools/StickyNote/scripts/savecontent.gd" id="2_3jlap"]
[ext_resource type="Script" uid="uid://dcx7crs23nf4" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="2_4na7k"]
[ext_resource type="Script" uid="uid://cys8jd5nhsimb" path="res://Tools/StickyNote/scripts/grabber.gd" id="2_51uyu"]
[ext_resource type="Script" uid="uid://ca1kbfg1lnwo2" path="res://Tools/StickyNote/scripts/grabbers.gd" id="2_xtyqu"]
[ext_resource type="Script" uid="uid://d0sin64i4v3op" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="3_8lilf"]
[ext_resource type="Script" uid="uid://mff4vrk2r4wk" path="res://Tools/StickyNote/scripts/stickynote.gd" id="3_51uyu"]
[ext_resource type="Script" uid="uid://pri4lcuwbu8a" path="res://Tools/StickyNote/scripts/exitbutton.gd" id="3_b2u1r"]
[ext_resource type="Script" uid="uid://1o3dvd61ag83" path="res://Tools/StickyNote/scripts/texteditbehavior.gd" id="4_51uyu"]
[ext_resource type="Script" uid="uid://dlok0dv1tq2bf" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="4_eh2jb"]
[ext_resource type="Script" uid="uid://bayuh2vafablg" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="5_51uyu"]
[ext_resource type="Script" uid="uid://dfr1w7u3jgni3" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="6_ah2re"]
[ext_resource type="Script" uid="uid://bsi6dexoofpe6" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="7_vyfa7"]
[ext_resource type="Script" uid="uid://boe5fj1a8q5qq" path="res://Tools/StickyNote/scripts/tags_container.gd" id="12_ah2re"]

[sub_resource type="Resource" id="Resource_ah2re"]
resource_local_to_scene = true
script = ExtResource("2_4na7k")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_vyfa7"]
resource_local_to_scene = true
script = ExtResource("3_8lilf")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_b2u1r"]
resource_local_to_scene = true
script = ExtResource("4_eh2jb")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_xtyqu"]
resource_local_to_scene = true
script = ExtResource("5_51uyu")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_3jlap"]
resource_local_to_scene = true
script = ExtResource("6_ah2re")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_nxmb2"]
resource_local_to_scene = true
script = ExtResource("7_vyfa7")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[node name="Note" type="Panel"]
texture_filter = 2
texture_repeat = 2
custom_minimum_size = Vector2(180, 250)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -125.0
offset_right = 90.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_51uyu")
script = ExtResource("2_3jlap")
filename = "test"

[node name="Grabbers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_xtyqu")

[node name="TitleBar" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 36.0
offset_right = -30.0
offset_bottom = 34.0
grow_horizontal = 2
mouse_default_cursor_shape = 6

[node name="Top" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 2
mouse_default_cursor_shape = 9
theme_type_variation = &"Edge"

[node name="Bottom" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 9
theme_type_variation = &"Edge"

[node name="Left" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -6.0
offset_right = 6.0
grow_vertical = 2
mouse_default_cursor_shape = 10
theme_type_variation = &"Edge"

[node name="Right" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_right = 6.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10
theme_type_variation = &"Edge"

[node name="TopLeft" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 0
offset_left = -4.0
offset_top = -4.0
mouse_default_cursor_shape = 12
theme_type_variation = &"Edge"

[node name="TopRight" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -4.0
offset_right = 4.0
grow_horizontal = 0
mouse_default_cursor_shape = 11
theme_type_variation = &"Edge"

[node name="BottomLeft" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_bottom = 4.0
grow_vertical = 0
mouse_default_cursor_shape = 11
theme_type_variation = &"Edge"

[node name="BottomRight" type="Control" parent="Grabbers"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 12
theme_type_variation = &"Edge"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TopBar" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
mouse_filter = 2
color = Color(0.968627, 0.823529, 0.478431, 1)
script = ExtResource("2_51uyu")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
text = "..."
flat = false
item_count = 2
popup/item_0/text = "Save"
popup/item_0/id = 0
popup/item_1/text = "Load"
popup/item_1/id = 1

[node name="Title" type="Label" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Exit" type="Button" parent="VBoxContainer/TopBar/HBoxContainer"]
layout_mode = 2
text = "X"
script = ExtResource("3_b2u1r")

[node name="Content" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_vertical_custom_step = 1.0
horizontal_scroll_mode = 0

[node name="MarkdownEdit" type="PanelContainer" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
mouse_default_cursor_shape = 1
theme = ExtResource("1_51uyu")
theme_type_variation = &"MarkdownEdit"
script = ExtResource("3_51uyu")

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Content/MarkdownEdit"]
layout_mode = 2
emoji_menu_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
caret_multiple = false
script = ExtResource("4_51uyu")

[node name="MarkdownLabel" type="RichTextLabel" parent="VBoxContainer/Content/MarkdownEdit"]
visible = false
layout_mode = 2
focus_mode = 2
mouse_filter = 1
bbcode_enabled = true
fit_content = true
selection_enabled = true
script = ExtResource("1_kdu8c")
h1 = SubResource("Resource_ah2re")
h2 = SubResource("Resource_vyfa7")
h3 = SubResource("Resource_b2u1r")
h4 = SubResource("Resource_xtyqu")
h5 = SubResource("Resource_3jlap")
h6 = SubResource("Resource_nxmb2")
metadata/_custom_type_script = "uid://dbap0gqox0ty1"

[node name="TagsContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"TagsContainer"
follow_focus = true
vertical_scroll_mode = 0
script = ExtResource("12_ah2re")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TagsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="tag_entry" type="LineEdit" parent="VBoxContainer/TagsContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_51uyu")
theme_type_variation = &"tag"
placeholder_text = "add tag"
alignment = 1
max_length = 26
expand_to_text_length = true

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 1
access = 1

[connection signal="mouse_entered" from="." to="VBoxContainer/Content/MarkdownEdit" method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="." to="VBoxContainer/Content/MarkdownEdit" method="_on_control_mouse_exited"]
[connection signal="gui_input" from="Grabbers/TitleBar" to="Grabbers" method="_on_title_bar_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/TopBar" to="VBoxContainer/TopBar" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/TopBar" to="VBoxContainer/TopBar" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/TopBar/HBoxContainer/Exit" to="VBoxContainer/TopBar/HBoxContainer/Exit" method="_on_pressed"]
[connection signal="focus_exited" from="VBoxContainer/Content/MarkdownEdit/TextEdit" to="VBoxContainer/Content/MarkdownEdit" method="_on_text_edit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/Content/MarkdownEdit/TextEdit" to="VBoxContainer/Content/MarkdownEdit" method="_on_text_edit_text_changed"]
[connection signal="focus_entered" from="VBoxContainer/Content/MarkdownEdit/MarkdownLabel" to="VBoxContainer/Content/MarkdownEdit" method="_on_markdown_label_focus_entered"]
[connection signal="text_submitted" from="VBoxContainer/TagsContainer/HBoxContainer/tag_entry" to="VBoxContainer/TagsContainer" method="_on_tag_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/TagsContainer/HBoxContainer/tag_entry" to="VBoxContainer/TagsContainer/HBoxContainer/tag_entry" method="_on_text_submitted"]
